--- a/wallet/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/wallet/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,5 +1,5 @@
 databaseChangeLog:
   - include:
-      file: "empty-changeset.sql"
+      file: "create-tables-user-and-operation.sql"
       relativeToChangelogFile: true
 
