--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version "${spring_boot_gradle_plugin_version}"
 	id 'com.google.protobuf' version "${protobuf_gradle_version}"
 	id 'java'
+	id 'org.liquibase.gradle' version '2.0.4'
 }
 
 allprojects {
