--- a/wallet/build.gradle
+++ b/wallet/build.gradle
@@ -3,10 +3,16 @@ apply plugin: 'java-library'
 
 dependencies {
     implementation(project(":wallet-grpc-api"))
+    implementation(project(":wallet-client"))
     implementation("net.devh:grpc-server-spring-boot-starter:${devh_version}")
     implementation('org.springframework.boot:spring-boot-starter-web')
     implementation('org.springframework.boot:spring-boot-starter-data-jpa')
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     runtimeOnly 'mysql:mysql-connector-java'
+    implementation 'io.springfox:springfox-swagger2:3.0.0'
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.7.2'
+    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.4.0-b180830.0359'
 }
+
 
