--- a/wallet/src/main/resources/application.properties
+++ b/wallet/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/wallet?characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=root
+server.port=8081
 
-grpc.server.port=9090
+grpc.server.port=9091
+
