--- a/wallet-client/build.gradle
+++ b/wallet-client/build.gradle
@@ -11,6 +11,8 @@ dependencies {
     implementation group: 'net.devh', name: 'grpc-client-spring-boot-starter', version: '2.13.1.RELEASE'
     implementation(project(":wallet-grpc-api"))
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'io.springfox:springfox-swagger2:3.0.0'
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
 
 
 }
